feat: Schedule Domain 수정